--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "angular-loader": "~1.4.0",
     "ui-router": "~0.2.15",
     "font-awesome": "~4.3.0",
-    "angular-material-source": "git://github.com/angular/material.git"
+    "angular-material-source": "git://github.com/angular/material.git",
+    "angular-translate": "~2.7.2",
+    "angular-sanitize": "~1.4.0"
   }
 }
