--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*"
+		"laravel/framework": "5.0.*",
+		"barryvdh/laravel-ide-helper": "^2.0",
+		"tymon/jwt-auth": "0.5.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
